<resources>
    <string name="app_name">RecursosHumanos</string>
    <string name="texto_descritivo_app">Esse é o nosso aplicativo de cadastro de funcionaries, aqui vamos cadastrar as informações e calcular o salário de funcionárie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo_cadastro">Cadastro de Informações</string>
    <string name="hint_nome_sobrenome">Nome e Sobrenome</string>
    <string name="hint_horas_trabalhadas">Horas Trabalhadas</string>
    <string name="hint_valor_por_hora">Valor por Hora</string>
    <string name="texto_botao_calcular">Calcular salário</string>
    <string name="titulo_salario">Salário a receber</string>
    <string name="descricao_imagem_avatar">ícone de pessoa que simboliza usuário na cor cinza</string>
    <string name="texto_nome_user">Nome Usuário</string>
    <string name="texto_horas">Horas trabalhadas: 8h</string>
    <string name="texto_valor">Valor por hora: R$ 50,00</string>
    <string name="texto_salario">Salário a receber: R$ 400,00</string>
</resources>