<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/cinza_claro">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".home.MainActivity">

        <TextView
            android:id="@+id/tv_titulo_salario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_salario"
            android:textSize="@dimen/tamanho_fonte_16"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/margem_16"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="@dimen/largura_45"
            android:layout_height="@dimen/altura_45"
            android:src="@drawable/avatar"
            android:contentDescription="@string/descricao_imagem_avatar"
            android:layout_marginTop="@dimen/margem_20"
            android:layout_marginHorizontal="@dimen/margem_16"
            android:layout_marginBottom="@dimen/margem_16"
            app:layout_constraintTop_toBottomOf="@id/tv_titulo_salario"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_nome_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margem_30"
            android:layout_marginHorizontal="@dimen/margem_16"
            android:layout_marginBottom="@dimen/margem_16"
            android:text="@string/texto_nome_user"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/iv_avatar"
            app:layout_constraintTop_toBottomOf="@id/tv_titulo_salario"/>

        <TextView
            android:id="@+id/tv_horas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_horas"
            android:layout_margin="@dimen/margem_16"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/iv_avatar"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_valor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_valor"
            android:layout_margin="@dimen/margem_16"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_horas"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_salario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_salario"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_margin="@dimen/margem_16"
            app:layout_constraintTop_toBottomOf="@id/tv_valor"
            app:layout_constraintStart_toStartOf="parent"/>




    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>